# fastapi-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci-checks.yml
src/: main.py
src/api/v1/: api.py  models.py
src/api/v1/routes/: health.py
src/core/: config.py  logging.py
tests/: test_v1_route_health.py
